// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Button component with props render add-comment Button component  1`] = `
<Button
  labelText="UL"
  type="add-comment"
>
  <span
    className="btn-element small"
    id="add-comment"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render backward-nav-active Button component   1`] = `
<Button
  labelText="UL"
  type="backward-nav-active"
>
  <span
    className="btn-element"
    id="backward-nav-active"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render color-palette Button component   1`] = `
<Button
  labelText="UL"
  type="color-palette"
>
  <span
    className="btn-element"
    id="color-palette"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render comment-flag Button component   1`] = `
<Button
  labelText="UL"
  type="comment-flag"
>
  <span
    className="btn-element small"
    id="flag-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render delete-element Button component   1`] = `
<Button
  labelText="UL"
  type="delete-element"
>
  <span
    className="btn-element"
    id="delete-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render element-label Button component   1`] = `
<Button
  labelText="UL"
  type="element-label"
>
  <span
    className="btn-element"
    id="element-label"
  >
    UL
  </span>
</Button>
`;

exports[`Testing Button component with props render expand Button component   1`] = `
<Button
  labelText="UL"
  type="expand"
>
  <span
    className="btn-element"
    id="expand-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render forward-nav-active Button component   1`] = `
<Button
  labelText="UL"
  type="forward-nav-active"
>
  <span
    className="btn-element"
    id="forward-nav-active"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render split Button component  1`] = `
<Button
  labelText="UL"
  type="split"
>
  <span
    className="btn-element"
    id="split-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render tcm Button component   1`] = `
<Button
  labelText="UL"
  type="tcm"
>
  <span
    className="btn-element small"
    id="tcm-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;
